--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,8 +14,9 @@
     "@google-cloud/storage": "^2.4.2",
     "body-parser": "^1.18.3",
     "dateformat": "^3.0.3",
-    "express": "^4.16.4",
+    "express": "^4.18.2",
     "multer": "^1.4.1",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "nodemon": "^2.0.22"
   }
 }
